--- a/notebook/gabriel_EDA.ipynb
+++ b/notebook/gabriel_EDA.ipynb
@@ -2337,6 +2337,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Check for available GPUs and, if found, configure TensorFlow to use memory growth\n",
         "physical_devices = tf.config.list_physical_devices('GPU')\n",
         "try:\n",
         "    tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
@@ -2346,11 +2347,11 @@
         "    pass"
       ],
       "metadata": {
-        "id": "WAS1OUWuaxWD",
-        "outputId": "d4ec8b5b-a805-49e8-bf7f-2d0b807da0db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WAS1OUWuaxWD",
+        "outputId": "d4ec8b5b-a805-49e8-bf7f-2d0b807da0db"
       },
       "id": "WAS1OUWuaxWD",
       "execution_count": 2,
@@ -2367,6 +2368,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Get GPU infos\n",
         "gpu_info = !nvidia-smi\n",
         "gpu_info = '\\n'.join(gpu_info)\n",
         "if gpu_info.find('failed') >= 0:\n",
@@ -2375,11 +2377,11 @@
         "  print(gpu_info)"
       ],
       "metadata": {
-        "id": "2jHFFYI2aIKi",
-        "outputId": "61813cda-c9ab-4966-982e-10a274f4bd13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2jHFFYI2aIKi",
+        "outputId": "61813cda-c9ab-4966-982e-10a274f4bd13"
       },
       "id": "2jHFFYI2aIKi",
       "execution_count": 3,
@@ -2431,11 +2433,11 @@
         "# al_path = \"../raw_data/alignments/s1/bbal6n.align\""
       ],
       "metadata": {
-        "id": "FFbQ3nP7VhRl",
-        "outputId": "91b18e97-97f4-4cc3-a8c4-6d331eb180f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FFbQ3nP7VhRl",
+        "outputId": "91b18e97-97f4-4cc3-a8c4-6d331eb180f2"
       },
       "id": "FFbQ3nP7VhRl",
       "execution_count": 4,
@@ -2538,6 +2540,9 @@
         "# Data Preprocessing\n",
         "# Create map function from load_data()\n",
         "def map_function(path):\n",
+        "    '''\n",
+        "    Wrapper function for load_data()\n",
+        "    '''\n",
         "    result = tf.py_function(load_data, [path], (tf.float32, tf.int64))\n",
         "    return result\n",
         "# Main Pipeline\n",
@@ -2584,6 +2589,9 @@
         "\n",
         "# Training Setup\n",
         "def scheduler(epoch, lr):\n",
+        "    '''\n",
+        "    Learning rate scheduler.\n",
+        "    '''\n",
         "    if epoch < 30:\n",
         "        return lr\n",
         "    else:\n",
@@ -2591,6 +2599,9 @@
         "\n",
         "# Source https://keras.io/examples/audio/ctc_asr/\n",
         "def CTCLoss(y_true, y_pred):\n",
+        "    '''\n",
+        "    Calculate the CTC loss between the true and predicted alignments.\n",
+        "    '''\n",
         "    batch_len = tf.cast(tf.shape(y_true)[0], dtype=\"int64\")\n",
         "    input_length = tf.cast(tf.shape(y_pred)[1], dtype=\"int64\")\n",
         "    label_length = tf.cast(tf.shape(y_true)[1], dtype=\"int64\")\n",
@@ -2602,10 +2613,16 @@
         "    return loss\n",
         "\n",
         "class ProduceExample(tf.keras.callbacks.Callback):\n",
+        "    '''\n",
+        "    Callback to display the original and predicted alignments after each epoch.\n",
+        "    '''\n",
         "    def __init__(self, dataset) -> None:\n",
         "        self.dataset = dataset.as_numpy_iterator()\n",
         "\n",
         "    def on_epoch_end(self, epoch, logs=None) -> None:\n",
+        "        '''\n",
+        "        Displays the original and predicted alignments after each epoch.\n",
+        "        '''\n",
         "        data = self.dataset.next()\n",
         "        yhat = self.model.predict(data[0])\n",
         "        decoded = tf.keras.backend.ctc_decode(yhat, [75,75], greedy=False)[0][0].numpy()\n",
@@ -2623,11 +2640,11 @@
         "example_callback = ProduceExample(test)\n"
       ],
       "metadata": {
-        "id": "BbltwkcEVktq",
-        "outputId": "a95c6db4-275d-44d6-fc30-11962e661aed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BbltwkcEVktq",
+        "outputId": "a95c6db4-275d-44d6-fc30-11962e661aed"
       },
       "id": "BbltwkcEVktq",
       "execution_count": 5,
@@ -2645,7 +2662,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Training"
+        "# Training"
       ],
       "metadata": {
         "id": "G-nHym5i8pRz"
@@ -2677,7 +2694,160 @@
           "name": "stdout",
           "text": [
             "Epoch 1/100\n",
-            "\u001b[1m 69/450\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m7:57\u001b[0m 1s/step - loss: 131.9132"
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
+            "Original: set red in n five soon\n",
+            "Prediction: le e e e e eo\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: place blue in v one again\n",
+            "Prediction: le e e e e eo\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m963s\u001b[0m 2s/step - loss: 100.8057 - val_loss: 69.5368 - learning_rate: 1.0000e-04\n",
+            "Epoch 2/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
+            "Original: bin red at s seven soon\n",
+            "Prediction: la e e e e oa\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: lay blue by e one soon\n",
+            "Prediction: la e e e e o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m450s\u001b[0m 1s/step - loss: 72.2607 - val_loss: 65.1410 - learning_rate: 1.0000e-04\n",
+            "Epoch 3/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
+            "Original: lay white sp in e four now\n",
+            "Prediction: la e e e e ean\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: set blue with b five again\n",
+            "Prediction: la e e e e ean\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m449s\u001b[0m 999ms/step - loss: 68.2105 - val_loss: 61.7020 - learning_rate: 1.0000e-04\n",
+            "Epoch 4/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
+            "Original: lay red at k eight please\n",
+            "Prediction: la e e t e on\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: lay red in q nine again\n",
+            "Prediction: la e e t e ao\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 983ms/step - loss: 64.7367 - val_loss: 59.6642 - learning_rate: 1.0000e-04\n",
+            "Epoch 5/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 58ms/step\n",
+            "Original: set green by j three again\n",
+            "Prediction: la e t e eo\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: place blue in b seven soon\n",
+            "Prediction: la e t e eon\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 982ms/step - loss: 62.8146 - val_loss: 58.5360 - learning_rate: 1.0000e-04\n",
+            "Epoch 6/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
+            "Original: set red at h four now\n",
+            "Prediction: la re i e on\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: place white in x zero now\n",
+            "Prediction: la re i e on\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m444s\u001b[0m 987ms/step - loss: 61.3012 - val_loss: 56.8909 - learning_rate: 1.0000e-04\n",
+            "Epoch 7/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
+            "Original: set green with x five again\n",
+            "Prediction: la re i e ean\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: place white with r zero please\n",
+            "Prediction: la re i e ean\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m448s\u001b[0m 996ms/step - loss: 59.5457 - val_loss: 56.1325 - learning_rate: 1.0000e-04\n",
+            "Epoch 8/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
+            "Original: lay blue with l zero please\n",
+            "Prediction: la re i e o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: set green with d one soon\n",
+            "Prediction: la re i e o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m455s\u001b[0m 1s/step - loss: 58.4272 - val_loss: 54.5515 - learning_rate: 1.0000e-04\n",
+            "Epoch 9/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
+            "Original: set blue with h six now\n",
+            "Prediction: la re t e an\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: bin white at t five again\n",
+            "Prediction: la re t e an\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m452s\u001b[0m 1s/step - loss: 54.9184 - val_loss: 51.0445 - learning_rate: 1.0000e-04\n",
+            "Epoch 10/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 80ms/step\n",
+            "Original: place red at j one soon\n",
+            "Prediction: la re i e o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: lay white sp by z five soon\n",
+            "Prediction: la re i e o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m458s\u001b[0m 1s/step - loss: 53.1937 - val_loss: 51.0962 - learning_rate: 1.0000e-04\n",
+            "Epoch 11/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
+            "Original: place white at d two now\n",
+            "Prediction: la re t e ao\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: bin white with u zero now\n",
+            "Prediction: la re i e ao\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m448s\u001b[0m 996ms/step - loss: 52.2055 - val_loss: 48.3693 - learning_rate: 1.0000e-04\n",
+            "Epoch 12/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
+            "Original: bin green with o four please\n",
+            "Prediction: la re i ie ae\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: place green by e four please\n",
+            "Prediction: la re i ie an\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 982ms/step - loss: 50.6972 - val_loss: 46.4952 - learning_rate: 1.0000e-04\n",
+            "Epoch 13/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
+            "Original: lay green with g four please\n",
+            "Prediction: la re t ie ae\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: set blue at g eight now\n",
+            "Prediction: la re i n o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m448s\u001b[0m 996ms/step - loss: 49.0163 - val_loss: 45.0921 - learning_rate: 1.0000e-04\n",
+            "Epoch 14/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 53ms/step\n",
+            "Original: lay blue at d seven soon\n",
+            "Prediction: la re i ie on\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: place green with l two please\n",
+            "Prediction: la re t ie lae\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m441s\u001b[0m 980ms/step - loss: 47.4521 - val_loss: 42.6951 - learning_rate: 1.0000e-04\n",
+            "Epoch 15/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
+            "Original: bin blue by m one soon\n",
+            "Prediction: sla bre t oe o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: place white with e zero now\n",
+            "Prediction: sla re it ie o\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m437s\u001b[0m 972ms/step - loss: 45.3637 - val_loss: 40.4857 - learning_rate: 1.0000e-04\n",
+            "Epoch 16/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
+            "Original: set green with j six please\n",
+            "Prediction: la wrie it ie lae\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: lay white in y seven soon\n",
+            "Prediction: la re b ie on\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m447s\u001b[0m 994ms/step - loss: 43.8794 - val_loss: 39.4745 - learning_rate: 1.0000e-04\n",
+            "Epoch 17/100\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 64ms/step\n",
+            "Original: place blue at v three soon\n",
+            "Prediction: la gre it ie aon\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "Original: lay green with m seven soon\n",
+            "Prediction: la gre it ie on\n",
+            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 983ms/step - loss: 42.5827 - val_loss: 37.6453 - learning_rate: 1.0000e-04\n",
+            "Epoch 18/100\n",
+            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 494ms/step - loss: 41.1400"
           ]
         }
       ]
