--- a/notebook/gabriel_EDA.ipynb
+++ b/notebook/gabriel_EDA.ipynb
@@ -62,12 +62,20 @@
     },
     {
       "cell_type": "markdown",
+      "id": "498d1fd2",
+      "metadata": {},
+      "source": [
+        "# Exploration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "WlFEkhfOs60v",
       "metadata": {
         "id": "WlFEkhfOs60v"
       },
       "source": [
-        "# Load Data"
+        "## Load Data"
       ]
     },
     {
@@ -985,7 +993,7 @@
         "id": "pUVS5Mh1eF6Z"
       },
       "source": [
-        "# Pipeline"
+        "## Pipeline"
       ]
     },
     {
@@ -1097,7 +1105,7 @@
         "id": "X6dgFWpuVmMK"
       },
       "source": [
-        "# DNN"
+        "## DNN"
       ]
     },
     {
@@ -2316,26 +2324,7 @@
       "metadata": {
         "id": "XLyH0gb0VITD"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-05-29 10:51:58.002010: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2025-05-29 10:51:59.292784: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2025-05-29 10:52:00.184031: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1748483520.772150    4354 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1748483521.133125    4354 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "W0000 00:00:1748483523.162426    4354 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1748483523.163495    4354 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1748483523.163503    4354 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1748483523.163506    4354 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "2025-05-29 10:52:03.466237: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Imports\n",
         "import os\n",
@@ -2356,7 +2345,7 @@
       "id": "fbd0796a",
       "metadata": {},
       "source": [
-        "## Google Colag Setup"
+        "## Google Colab Setup"
       ]
     },
     {
@@ -2772,169 +2761,7 @@
         "id": "nntvypEz8Q_5",
         "outputId": "94a2390b-7f58-4a89-b12e-7d526d89304a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
-            "Original: set red in n five soon\n",
-            "Prediction: le e e e e eo\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: place blue in v one again\n",
-            "Prediction: le e e e e eo\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m963s\u001b[0m 2s/step - loss: 100.8057 - val_loss: 69.5368 - learning_rate: 1.0000e-04\n",
-            "Epoch 2/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
-            "Original: bin red at s seven soon\n",
-            "Prediction: la e e e e oa\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay blue by e one soon\n",
-            "Prediction: la e e e e o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m450s\u001b[0m 1s/step - loss: 72.2607 - val_loss: 65.1410 - learning_rate: 1.0000e-04\n",
-            "Epoch 3/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
-            "Original: lay white sp in e four now\n",
-            "Prediction: la e e e e ean\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: set blue with b five again\n",
-            "Prediction: la e e e e ean\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m449s\u001b[0m 999ms/step - loss: 68.2105 - val_loss: 61.7020 - learning_rate: 1.0000e-04\n",
-            "Epoch 4/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
-            "Original: lay red at k eight please\n",
-            "Prediction: la e e t e on\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay red in q nine again\n",
-            "Prediction: la e e t e ao\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 983ms/step - loss: 64.7367 - val_loss: 59.6642 - learning_rate: 1.0000e-04\n",
-            "Epoch 5/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 58ms/step\n",
-            "Original: set green by j three again\n",
-            "Prediction: la e t e eo\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: place blue in b seven soon\n",
-            "Prediction: la e t e eon\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 982ms/step - loss: 62.8146 - val_loss: 58.5360 - learning_rate: 1.0000e-04\n",
-            "Epoch 6/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
-            "Original: set red at h four now\n",
-            "Prediction: la re i e on\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: place white in x zero now\n",
-            "Prediction: la re i e on\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m444s\u001b[0m 987ms/step - loss: 61.3012 - val_loss: 56.8909 - learning_rate: 1.0000e-04\n",
-            "Epoch 7/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
-            "Original: set green with x five again\n",
-            "Prediction: la re i e ean\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: place white with r zero please\n",
-            "Prediction: la re i e ean\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m448s\u001b[0m 996ms/step - loss: 59.5457 - val_loss: 56.1325 - learning_rate: 1.0000e-04\n",
-            "Epoch 8/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
-            "Original: lay blue with l zero please\n",
-            "Prediction: la re i e o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: set green with d one soon\n",
-            "Prediction: la re i e o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m455s\u001b[0m 1s/step - loss: 58.4272 - val_loss: 54.5515 - learning_rate: 1.0000e-04\n",
-            "Epoch 9/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
-            "Original: set blue with h six now\n",
-            "Prediction: la re t e an\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: bin white at t five again\n",
-            "Prediction: la re t e an\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m452s\u001b[0m 1s/step - loss: 54.9184 - val_loss: 51.0445 - learning_rate: 1.0000e-04\n",
-            "Epoch 10/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 80ms/step\n",
-            "Original: place red at j one soon\n",
-            "Prediction: la re i e o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay white sp by z five soon\n",
-            "Prediction: la re i e o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m458s\u001b[0m 1s/step - loss: 53.1937 - val_loss: 51.0962 - learning_rate: 1.0000e-04\n",
-            "Epoch 11/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
-            "Original: place white at d two now\n",
-            "Prediction: la re t e ao\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: bin white with u zero now\n",
-            "Prediction: la re i e ao\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m448s\u001b[0m 996ms/step - loss: 52.2055 - val_loss: 48.3693 - learning_rate: 1.0000e-04\n",
-            "Epoch 12/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
-            "Original: bin green with o four please\n",
-            "Prediction: la re i ie ae\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: place green by e four please\n",
-            "Prediction: la re i ie an\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 982ms/step - loss: 50.6972 - val_loss: 46.4952 - learning_rate: 1.0000e-04\n",
-            "Epoch 13/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
-            "Original: lay green with g four please\n",
-            "Prediction: la re t ie ae\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: set blue at g eight now\n",
-            "Prediction: la re i n o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m448s\u001b[0m 996ms/step - loss: 49.0163 - val_loss: 45.0921 - learning_rate: 1.0000e-04\n",
-            "Epoch 14/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 53ms/step\n",
-            "Original: lay blue at d seven soon\n",
-            "Prediction: la re i ie on\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: place green with l two please\n",
-            "Prediction: la re t ie lae\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m441s\u001b[0m 980ms/step - loss: 47.4521 - val_loss: 42.6951 - learning_rate: 1.0000e-04\n",
-            "Epoch 15/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
-            "Original: bin blue by m one soon\n",
-            "Prediction: sla bre t oe o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: place white with e zero now\n",
-            "Prediction: sla re it ie o\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m437s\u001b[0m 972ms/step - loss: 45.3637 - val_loss: 40.4857 - learning_rate: 1.0000e-04\n",
-            "Epoch 16/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
-            "Original: set green with j six please\n",
-            "Prediction: la wrie it ie lae\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay white in y seven soon\n",
-            "Prediction: la re b ie on\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m447s\u001b[0m 994ms/step - loss: 43.8794 - val_loss: 39.4745 - learning_rate: 1.0000e-04\n",
-            "Epoch 17/100\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 64ms/step\n",
-            "Original: place blue at v three soon\n",
-            "Prediction: la gre it ie aon\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay green with m seven soon\n",
-            "Prediction: la gre it ie on\n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 983ms/step - loss: 42.5827 - val_loss: 37.6453 - learning_rate: 1.0000e-04\n",
-            "Epoch 18/100\n",
-            "\u001b[1m450/450\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 494ms/step - loss: 41.1400"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "model.fit(\n",
         "    train,\n",
@@ -3021,6 +2848,22 @@
         "result = run_prediction(model, video_path)\n",
         "result"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "bd3d79c6",
+      "metadata": {},
+      "source": [
+        "# Evaluation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a79eade6",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
