--- a/notebook/gabriel_EDA.ipynb
+++ b/notebook/gabriel_EDA.ipynb
@@ -63,7 +63,9 @@
     {
       "cell_type": "markdown",
       "id": "498d1fd2",
-      "metadata": {},
+      "metadata": {
+        "id": "498d1fd2"
+      },
       "source": [
         "# Exploration"
       ]
@@ -2319,7 +2321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "id": "XLyH0gb0VITD",
       "metadata": {
         "id": "XLyH0gb0VITD"
@@ -2343,7 +2345,9 @@
     {
       "cell_type": "markdown",
       "id": "fbd0796a",
-      "metadata": {},
+      "metadata": {
+        "id": "fbd0796a"
+      },
       "source": [
         "## Google Colab Setup"
       ]
@@ -2357,14 +2361,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WAS1OUWuaxWD",
-        "outputId": "0b4e1a64-7184-4a62-dcdf-8bde0d1bc253"
+        "outputId": "eb9e6ab3-d616-4cdf-fda5-d9063475fc10"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "ok\n"
+            "error\n"
           ]
         }
       ],
@@ -2388,33 +2392,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jHFFYI2aIKi",
-        "outputId": "53368274-b355-4444-8b03-a8d6f7771cb4"
+        "outputId": "b8c95509-7eea-411c-c27b-980ef7e836f0"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Thu May 29 00:11:55 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  NVIDIA A100-SXM4-40GB          Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   33C    P0             45W /  400W |       5MiB /  40960MiB |      0%      Default |\n",
-            "|                                         |                        |             Disabled |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
-            "+-----------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ],
@@ -2437,12 +2422,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFbQ3nP7VhRl",
-        "outputId": "33d7882d-6030-4925-993d-a957b8efc0af"
+        "outputId": "0fa1c909-3e7c-42ba-c695-200cb63c1321"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -2468,21 +2453,19 @@
     {
       "cell_type": "markdown",
       "id": "b4b9a532",
-      "metadata": {},
+      "metadata": {
+        "id": "b4b9a532"
+      },
       "source": [
         "## Clean"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "BbltwkcEVktq",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BbltwkcEVktq",
-        "outputId": "7674aba1-2b44-4cb8-a469-b4cb7437c3df"
+        "id": "BbltwkcEVktq"
       },
       "outputs": [],
       "source": [
@@ -2547,20 +2530,24 @@
         "  Take a path as a tensor, load the video and corresponding alignments,\n",
         "  and return two tensors, one for the processed frames,\n",
         "  one for the encoded tokens.\n",
+        "\n",
+        "  The path must end by /video/ or /alignment/, the speaker folder, and the name of the file.\n",
         "  '''\n",
         "  # Convert the path back into a string\n",
         "  path = bytes.decode(path.numpy())\n",
         "\n",
-        "  # Get file name from path\n",
-        "  file_name = path.split('/')[-1].split('.')[0]\n",
+        "  path_components = path.split('/')\n",
+        "  # Get file and folder name from path\n",
+        "  file_name_with_extension = path_components[-1]\n",
+        "  file_name = file_name_with_extension.split('.')[0]\n",
+        "  video_folder_name = os.path.join('videos', path_components[-2])\n",
+        "  alignment_folder_name = os.path.join('alignments', path_components[-2])\n",
         "\n",
-        "  # Get path from file name\n",
-        "  video_path = os.path.join('../raw_data/videos/s1',f'{file_name}.mpg')\n",
-        "  alignment_path = os.path.join('../raw_data/alignments/s1',f'{file_name}.align')\n",
+        "  path_without_folder_and_file = '/'.join(path_components[:-3])\n",
         "\n",
         "   # Get path from file name\n",
-        "#   video_path = os.path.join('./drive/MyDrive/Project/Lip_reading/raw_data//videos/s1',f'{file_name}.mpg')\n",
-        "#   alignment_path = os.path.join('./drive/MyDrive/Project/Lip_reading/raw_data//alignments/s1',f'{file_name}.align')\n",
+        "  video_path = os.path.join(path_without_folder_and_file, video_folder_name, f'{file_name}.mpg')\n",
+        "  alignment_path = os.path.join(path_without_folder_and_file, alignment_folder_name, f'{file_name}.align')\n",
         "\n",
         "  # Load data\n",
         "  frames = load_video(video_path)\n",
@@ -2583,12 +2570,12 @@
         "# Training data preprocessing\n",
         "def preprocess_training_data(path: str):\n",
         "    '''\n",
-        "    Takes a path as a string, preprocess 500 videos from that path into batches of 2,\n",
+        "    Takes the path to the data folder as a string,\n",
+        "    preprocess 500 videos from that path into batches of 2,\n",
         "    and return training and testing sets.\n",
         "    '''\n",
         "    data = tf.data.Dataset.list_files(\n",
-        "        './drive/MyDrive/Project/Lip_reading/raw_data/videos/s1/*.mpg'\n",
-        "        # '../raw_data/videos/s1/*.mpg'\n",
+        "        f'{path}/*.mpg'\n",
         "    )\n",
         "    data = data.shuffle(500, reshuffle_each_iteration=False)\n",
         "    data = data.map(map_function)\n",
@@ -2606,9 +2593,9 @@
         "    Convert a video from a path into a tensor ready for prediction.\n",
         "    '''\n",
         "    video_tensor = tf.convert_to_tensor(path)\n",
-        "    processed_video, _ = map_function(video_tensor)\n",
+        "    processed_video, processed_align = map_function(video_tensor)\n",
         "    processed_video = tf.expand_dims(processed_video, axis=0)\n",
-        "    return processed_video\n",
+        "    return processed_video, processed_align\n",
         "\n",
         "\n",
         "\n",
@@ -2632,7 +2619,7 @@
         "    model.add(MaxPool3D((1,2,2)))\n",
         "\n",
         "    model.add(TimeDistributed(Reshape((-1,))))\n",
-        "    # model.add(TimeDistributed(Flatten()))\n",
+        "    # model.add(TimeDistributed(Flatten())) <= Did not work with this line\n",
         "\n",
         "    model.add(Bidirectional(LSTM(128, kernel_initializer='Orthogonal', return_sequences=True)))\n",
         "    model.add(Dropout(.5))\n",
@@ -2718,26 +2705,17 @@
         "    Takes a model and a path to a video and return the prediction as a string.\n",
         "    '''\n",
         "    # Preprocessing\n",
-        "    processed_video = preprocess_video(path)\n",
+        "    processed_video, processed_align = preprocess_video(path)\n",
         "    # Prediction\n",
         "    prediction = model(processed_video)\n",
         "    # Decoding\n",
         "    decoded_text = decode_prediction(prediction)\n",
+        "    decoded_text = decoded_text.numpy().decode()\n",
         "\n",
-        "    return decoded_text.numpy().decode()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6f4916e1",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Callbacks\n",
-        "checkpoint_callback = ModelCheckpoint(os.path.join(models_path,'checkpoint_epoch{epoch:02d}_loss{loss:.2f}.weights.h5'), monitor='loss', save_weights_only=True)\n",
-        "schedule_callback = LearningRateScheduler(scheduler)\n",
-        "example_callback = ProduceExample(test)"
+        "    decoded_align = tf.strings.reduce_join([num_to_char(i) for i in processed_align])\n",
+        "    decoded_align = decoded_align.numpy().decode()\n",
+        "\n",
+        "    return decoded_text, decoded_align\n"
       ]
     },
     {
@@ -2753,13 +2731,24 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "6f4916e1",
+      "metadata": {
+        "id": "6f4916e1"
+      },
+      "outputs": [],
+      "source": [
+        "# Callbacks\n",
+        "checkpoint_callback = ModelCheckpoint(os.path.join(models_path,'checkpoint_epoch{epoch:02d}_loss{loss:.2f}.weights.h5'), monitor='loss', save_weights_only=True)\n",
+        "schedule_callback = LearningRateScheduler(scheduler)\n",
+        "example_callback = ProduceExample(test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "nntvypEz8Q_5",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nntvypEz8Q_5",
-        "outputId": "94a2390b-7f58-4a89-b12e-7d526d89304a"
+        "id": "nntvypEz8Q_5"
       },
       "outputs": [],
       "source": [
@@ -2774,7 +2763,9 @@
     {
       "cell_type": "markdown",
       "id": "bffb4e96",
-      "metadata": {},
+      "metadata": {
+        "id": "bffb4e96"
+      },
       "source": [
         "# Prediction Test"
       ]
@@ -2791,28 +2782,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "id": "PJ-u_Fb-ZuQt",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PJ-u_Fb-ZuQt",
-        "outputId": "197a6e47-9d97-4a6f-9e88-b061469592e7"
+        "outputId": "18b530e7-e256-486e-f972-8d9982d9f927"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "/home/gabriel/.pyenv/versions/lip_reading-env/lib/python3.10/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
             "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
           ]
         }
       ],
       "source": [
-        "# weights_path = './drive/MyDrive/Project/Lip_reading/models/checkpoint_epoch30_loss2.71.weights.h5'\n",
-        "weights_path = '../models/weights/checkpoint_epoch06_loss1.67.weights.h5'\n",
+        "weights_path = './drive/MyDrive/Project/Lip_reading/models/checkpoint_epoch18_loss0.95.weights.h5'\n",
+        "# weights_path = '../models/weights/checkpoint_epoch06_loss1.67.weights.h5'\n",
         "\n",
         "model = initialize_model()\n",
         "model = load_model_weights(model, weights_path)"
@@ -2821,49 +2812,140 @@
     {
       "cell_type": "markdown",
       "id": "68b76161",
-      "metadata": {},
+      "metadata": {
+        "id": "68b76161"
+      },
       "source": [
         "## Run Prediction"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 37,
       "id": "666e2712",
-      "metadata": {},
+      "metadata": {
+        "id": "666e2712",
+        "outputId": "dc7bd914-7b47-4224-8660-fd1fc477af90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'bin blue at l six now'"
-            ]
-          },
-          "execution_count": 27,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
+            "Wall time: 5.25 µs\n",
+            "Prediction: place red in i eight please\n",
+            "Origin:     place red in i eight please\n"
+          ]
         }
       ],
       "source": [
-        "video_path = '../raw_data/videos/s1/bbal6n.mpg'\n",
-        "result = run_prediction(model, video_path)\n",
-        "result"
+        "%time\n",
+        "video_path = './drive/MyDrive/Project/Lip_reading/raw_data/videos/s1/prii8p.mpg'\n",
+        "pred, align = run_prediction(model, video_path)\n",
+        "print(f'Prediction: {pred}')\n",
+        "print(f'Origin:     {align}')"
       ]
     },
     {
       "cell_type": "markdown",
       "id": "bd3d79c6",
-      "metadata": {},
+      "metadata": {
+        "id": "bd3d79c6"
+      },
       "source": [
         "# Evaluation"
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "path = './drive/MyDrive/Project/Lip_reading/raw_data/videos/s1'\n",
+        "train, test = preprocess_training_data(path)"
+      ],
+      "metadata": {
+        "id": "-faCG7M5C6ZB"
+      },
+      "id": "-faCG7M5C6ZB",
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weights_path = './drive/MyDrive/Project/Lip_reading/models/checkpoint_epoch26_loss0.80.weights.h5'\n",
+        "\n",
+        "model = initialize_model()\n",
+        "model = load_model_weights(model, weights_path)\n",
+        "\n",
+        "# 4. Ensure your test dataset is available\n",
+        "# If you've restarted your notebook, you might need to re-run the data loading and preprocessing steps to get the 'test' dataset\n",
+        "# For example:\n",
+        "# train, test = preprocess_training_data(path) # Assuming 'path' is defined\n",
+        "\n",
+        "# 5. Define the calculate_average_wer function (if not already in your code)\n",
+        "def calculate_average_wer(model, dataset, num_to_char_layer):\n",
+        "    '''\n",
+        "    Calculates the average Word Error Rate (WER) over a dataset.\n",
+        "    '''\n",
+        "    total_wer = 0\n",
+        "    total_samples = 0\n",
+        "\n",
+        "    from jiwer import wer\n",
+        "\n",
+        "    for data in dataset.as_numpy_iterator():\n",
+        "        y_true = data[1]\n",
+        "        y_pred = model.predict(data[0])\n",
+        "\n",
+        "        # Use greedy decoding for WER calculation\n",
+        "        # input_lengths = [tf.shape(y_pred)[1].numpy()] * tf.shape(y_pred)[0].numpy() # Get input lengths for ctc_decode\n",
+        "        input_lengths = [tf.shape(y_pred)[1]] * tf.shape(y_pred)[0]\n",
+        "        decoded = tf.keras.backend.ctc_decode(y_pred, input_lengths, greedy=True)[0][0].numpy()\n",
+        "\n",
+        "        for x in range(len(y_true)):\n",
+        "            original_text = tf.strings.reduce_join(num_to_char_layer(y_true[x])).numpy().decode('utf-8').strip()\n",
+        "            prediction_text = tf.strings.reduce_join(num_to_char_layer(decoded[x])).numpy().decode('utf-8').strip()\n",
+        "\n",
+        "            # Handle empty strings gracefully before calculating WER\n",
+        "            if original_text == \"\" and prediction_text == \"\":\n",
+        "                sample_wer = 0.0\n",
+        "            elif original_text == \"\":\n",
+        "                # If original is empty, WER is the number of words in the prediction\n",
+        "                sample_wer = len(prediction_text.split()) if prediction_text else 0.0\n",
+        "            elif prediction_text == \"\":\n",
+        "                # If prediction is empty, WER is the number of words in the original\n",
+        "                sample_wer = len(original_text.split()) if original_text else 0.0\n",
+        "            else:\n",
+        "                sample_wer = wer(original_text, prediction_text)\n",
+        "\n",
+        "            total_wer += sample_wer\n",
+        "            total_samples += 1\n",
+        "\n",
+        "    average_wer = total_wer / total_samples if total_samples > 0 else 0\n",
+        "    return average_wer"
+      ],
+      "metadata": {
+        "id": "6UwqKakjxICu"
+      },
+      "id": "6UwqKakjxICu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "a79eade6",
-      "metadata": {},
+      "metadata": {
+        "id": "a79eade6"
+      },
       "outputs": [],
-      "source": []
+      "source": [
+        "average_wer_on_test = calculate_average_wer(model, test, num_to_char)\n",
+        "print(f'Average WER on Test Set with loaded weights: {average_wer_on_test:.4f}')"
+      ]
     }
   ],
   "metadata": {
@@ -2876,7 +2958,7 @@
         "sK11OrQas5U6",
         "o0l5jCmwYeYg"
       ],
-      "gpuType": "A100",
+      "gpuType": "T4",
       "machine_shape": "hm",
       "provenance": []
     },
