Modified preprocess_training_data to be able to handle multiple source folders

--- a/notebook/gabriel_EDA.ipynb
+++ b/notebook/gabriel_EDA.ipynb
@@ -2331,7 +2331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 18,
       "id": "XLyH0gb0VITD",
       "metadata": {
         "id": "XLyH0gb0VITD"
@@ -2354,15 +2354,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 19,
       "id": "e1aaaeea",
-      "metadata": {},
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e1aaaeea",
+        "outputId": "9b9fd65d-cc47-468f-b175-116b55507508"
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Running on a local machine\n"
+            "Running on Google Colab\n",
+            "error\n",
+            "/bin/bash: line 1: nvidia-smi: command not found\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -2379,6 +2388,7 @@
         "\n",
         "if is_running_on_colab():\n",
         "    print(\"Running on Google Colab\")\n",
+        "\n",
         "    # Check for available GPUs and, if found, configure TensorFlow to use memory growth\n",
         "    physical_devices = tf.config.list_physical_devices('GPU')\n",
         "    try:\n",
@@ -2432,7 +2442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "BbltwkcEVktq",
       "metadata": {
         "id": "BbltwkcEVktq"
@@ -2538,22 +2548,82 @@
         "    return result\n",
         "\n",
         "# Training data preprocessing\n",
+        "# def preprocess_training_data(path: str):\n",
+        "#     '''\n",
+        "#     Takes the path to the data folder as a string,\n",
+        "#     preprocess 500 videos from that path into batches of 2,\n",
+        "#     and return training and testing sets.\n",
+        "#     '''\n",
+        "#     data = tf.data.Dataset.list_files(\n",
+        "#         f'{path}/*.mpg'\n",
+        "#     )\n",
+        "#     data = data.shuffle(500, reshuffle_each_iteration=False)\n",
+        "#     data = data.map(map_function)\n",
+        "#     data = data.padded_batch(2, padded_shapes=([75, None, None, None], [40]))\n",
+        "#     data = data.prefetch(tf.data.AUTOTUNE)\n",
+        "#     # Train Test Split\n",
+        "#     train = data.take(450)\n",
+        "#     test = data.skip(450)\n",
+        "\n",
+        "#     return train, test\n",
+        "\n",
         "def preprocess_training_data(path: str):\n",
         "    '''\n",
         "    Takes the path to the data folder as a string,\n",
         "    preprocess 500 videos from that path into batches of 2,\n",
         "    and return training and testing sets.\n",
         "    '''\n",
-        "    data = tf.data.Dataset.list_files(\n",
-        "        f'{path}/*.mpg'\n",
-        "    )\n",
-        "    data = data.shuffle(500, reshuffle_each_iteration=False)\n",
-        "    data = data.map(map_function)\n",
+        "    # Selection of the speakers\n",
+        "    speaker_folders = ['s1', 's30', 's34']\n",
+        "    # Number of videos to take per speaker\n",
+        "    num_files_per_folder = 500\n",
+        "\n",
+        "    speaker_datasets = []\n",
+        "\n",
+        "    # Loop through the selected folders\n",
+        "    for folder in speaker_folders:\n",
+        "      folder_video_pattern = os.path.join(path, folder, '*.mpg')\n",
+        "      # List all the files in folder\n",
+        "      folder_files_dataset = tf.data.Dataset.list_files(folder_video_pattern)\n",
+        "      # Shuffle the files and take the desired number\n",
+        "      folder_files_dataset = folder_files_dataset.shuffle(\n",
+        "          1000,\n",
+        "          reshuffle_each_iteration=False\n",
+        "      ).take(num_files_per_folder)\n",
+        "      # Add the dataset for folder in speaker_datasets list\n",
+        "      speaker_datasets.append(folder_files_dataset)\n",
+        "\n",
+        "    # Combine the dataset from each folder into a new dataset\n",
+        "    combined_dataset = speaker_datasets[0]\n",
+        "\n",
+        "    for i in range (1, len(speaker_datasets)):\n",
+        "      combined_dataset = combined_dataset.interleave(\n",
+        "          speaker_datasets[i],\n",
+        "          cycle_length=tf.data.AUTOTUNE,\n",
+        "          block_length=1\n",
+        "      )\n",
+        "    # Preprocess the data\n",
+        "    data = combined_dataset.map(map_function)\n",
+        "\n",
+        "\n",
+        "    # MAKE SURE TO MODIFIE THE MAP FUNCTION TO HANDLE THE NEW PATHS\n",
+        "    # New paths = root of videos + folder + file\n",
+        "\n",
+        "    # Padding and prefetching\n",
         "    data = data.padded_batch(2, padded_shapes=([75, None, None, None], [40]))\n",
         "    data = data.prefetch(tf.data.AUTOTUNE)\n",
-        "    # Train Test Split\n",
-        "    train = data.take(450)\n",
-        "    test = data.skip(450)\n",
+        "\n",
+        "    # Splitting\n",
+        "    # Number of samples\n",
+        "    total_sample_to_use = num_files_per_folder * len(speaker_folders)\n",
+        "    train_samples = int(total_sample_to_use * 0.9)\n",
+        "    test_samples = total_sample_to_use - train_samples\n",
+        "\n",
+        "    # Shuffle the combined dataset before splitting\n",
+        "    data = data.shuffle(total_sample_to_use, reshuffle_each_iteration=False)\n",
+        "    # Split the dataset\n",
+        "    train = data.take(train_samples)\n",
+        "    test = data.skip(train_samples)\n",
         "\n",
         "    return train, test\n",
         "\n",
@@ -2707,7 +2777,12 @@
       "outputs": [],
       "source": [
         "# Callbacks\n",
-        "checkpoint_callback = ModelCheckpoint(os.path.join(models_path,'checkpoint_epoch{epoch:02d}_loss{loss:.2f}.weights.h5'), monitor='loss', save_weights_only=True)\n",
+        "checkpoint_callback = ModelCheckpoint(\n",
+        "    os.path.join(\n",
+        "        models_path,\n",
+        "        'checkpoint_epoch{epoch:02d}_loss{loss:.2f}.weights.h5'),\n",
+        "    monitor='loss',\n",
+        "    save_weights_only=True)\n",
         "schedule_callback = LearningRateScheduler(scheduler)\n",
         "example_callback = ProduceExample(test)"
       ]
@@ -2751,7 +2826,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "PJ-u_Fb-ZuQt",
       "metadata": {
         "colab": {
@@ -2797,7 +2872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "666e2712",
       "metadata": {
         "colab": {
@@ -2840,10 +2915,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "-faCG7M5C6ZB",
       "metadata": {
-        "id": "-faCG7M5C6ZB"
+        "id": "-faCG7M5C6ZB",
+        "outputId": "95497ac9-f070-44b7-ef74-171f572e6a71"
       },
       "outputs": [
         {
@@ -2865,9 +2941,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "f95ca004",
-      "metadata": {},
+      "metadata": {
+        "id": "f95ca004"
+      },
       "outputs": [],
       "source": [
         "# ! pip install jiwer"
@@ -2875,10 +2953,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "6UwqKakjxICu",
       "metadata": {
-        "id": "6UwqKakjxICu"
+        "id": "6UwqKakjxICu",
+        "outputId": "13f0724b-d6cd-484c-f8f4-d5dbf5de1eec"
       },
       "outputs": [
         {
@@ -2945,10 +3024,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "a79eade6",
       "metadata": {
-        "id": "a79eade6"
+        "id": "a79eade6",
+        "outputId": "c4c3a8b9-cf02-49f9-ac7b-225107245698"
       },
       "outputs": [
         {
